<resources>
    <string name="app_name">微兔gogo</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="refresh_pull_to_refresh">下拉可以刷新&#8230;</string>
    <string name="refresh_release_to_refresh">松开可以刷新&#8230;</string>
    <string name="refresh_refreshing">正在努力加载中&#8230;</string>
    <string name="share">分享</string>
    <string name="deatil">详情</string>
    <string name="go2_details_tip">查看详情</string>
    <string name="go2_skip_tip">跳过</string>
    <string name="vote_success_tip">您已投票成功</string>
    <string name="register_account">注册</string>
    <string name="login_account">登录</string>
    <string name="please_input_check_code_tip">请输入您的手机号获取验证码</string>
    <string name="please_input_invcode_tip">填写邀请码(如果您没有,可以不填)</string>
    <string name="plaese_input_invite_code_tip">填写邀请码，邀请人和注册人均可获得金币奖励</string>
    <string name="please_next_step_tip">提交验证码</string>
    <string name="please_input_hefan_phone">请输入合法的手机号码</string>
    <string name="please_input_nickname_tip">请输入您的昵称</string>
    <string name="protocol_wo_accept_tip">我已阅读并接受</string>
    <string name="v2gogo_protocol_tip">微兔gogo用户协议</string>
    <string name="please_read_v2gogo_tip">请勾选并仔细阅读v2gogo用户协议</string>
    <string name="register_invcode_not_exists_tip">您填写的邀请码对应的邀请人不存在</string>
    <string name="register_device_token_is_empty_tip">设备的唯一标识码为空</string>
    <string name="login_username_edittext_tip">请输入您的账号</string>
    <string name="login_userpass_edittext_tip">请输入您的密码</string>
    <string name="login_forget_password_tip">忘记密码</string>
    <string name="login_forget_register_tip">免费注册</string>
    <string name="register_username_edittext_tip">请输入您的手机号</string>
    <string name="register_userpass_edittext_tip">请输入您的密码</string>
    <string name="logining_tip">正在登录中&#8230;</string>
    <string name="registering_tip">正在注册中&#8230;</string>
    <string name="login_success">登录成功</string>
    <string name="passeord_diff_tip">两次输入的密码不一致</string>
    <string name="passeord_empty_tip">密码不能为空</string>
    <string name="account_register_fail">注册账号失败</string>
    <string name="input_no_empty_tip">输入的内容不能为空</string>
    <string name="feedback_upload_success">你的意见已发送成功</string>
    <string name="activity_tab_main_home_tip">首页</string>
    <string name="activity_tab_main_change_tip">兑换专区</string>
    <string name="activity_tab_main_profile_tip">我的</string>
    <string name="activity_tab_main_cart_tip">团购</string>
    <string name="activity_subject_titile">专题</string>
    <string name="left_prize_num">剩余:%d</string>
    <string name="total_prize_num">(总数:%d)</string>
    <string name="prize_description_tip">奖品说明:&#160;&#160;</string>
    <string name="v2gogo_update_version_tip">微兔gogo</string>
    <string name="v2gogo_version_downloading_tip">微兔gogo最新版本正在下载中&#8230;</string>
    <string name="goods_details_tip">商品详情</string>
    <string name="goods_details_buy_tip">立即订购</string>
    <string name="goods_yet_completed_tip">已经售罄</string>
    <string name="reply_me_tip">回复我的</string>
    <string name="home_v2gogo">全民秀</string>
    <string name="home_all_concern">百姓关注</string>
    <string name="home_everyday_shop">每日团购</string>
    <string name="home_live_video">直播</string>
    <string name="home_shake">摇摇乐</string>
    <string name="home_talk">百姓话题</string>
    <string name="more">更多</string>
    <string name="brower_tip">浏览:</string>
    <string name="kan_dian">关注</string>
    <string name="huodong">活动</string>
    <string name="huati">话题</string>
    <string name="gogo">gogo</string>
    <string name="shopping">购物</string>
    <string name="game">游戏</string>
    <string name="hudong">互动</string>
    <string name="today_shake_tip">今日摇奖</string>
    <string name="user_account_ex_title">账号异常</string>
    <string name="user_account_exception_tip">用户账号异常,请重新登录</string>
    <string name="home_v2gogo_dajiang">投票</string>
    <string name="home_v2gogo_registration">我要报名</string>
    <string name="home_v2gogo_interaction_share">分享</string>
    <string name="home_v2gogo_interaction_vote">投票</string>
    <string name="home_v2gogo_interaction_comment">评论</string>
    <string name="publish_comment_btn_tip">发布</string>
    <string name="home_v2gogo_interaction_comment_newest">最新评论</string>
    <string name="home_v2gogo_interaction_comment_hotest">热门评论</string>
    <string name="comment_list_input_tip">我也来说两句&#8230;</string>
    <string name="comment_content_no_empty_tip">评论的内容不能为空</string>
    <string name="comment_content_uploading_tip">评论正在发送中&#8230;</string>
    <string name="comment_list_tip">评论列表</string>
    <string name="vote_coin_cast_tip">每人限投一票,每票消耗%d个金币，赶紧为您支持的队伍投上一票吧!</string>
    <string name="vote_my_coin_tip">我的金币:&#160;&#160;%d</string>
    <string name="add_collections_tip">添加收藏成功</string>
    <string name="you_have_en_coin">您的金币不足哦</string>
    <string name="you_selcted_option_tip">请先选择您所支持的队伍哦!</string>
    <string name="interaction_end_tip">互动已结束</string>
    <string name="interaction_no_start_tip">互动未开始</string>
    <string name="real_interaction_person_actions">实时参与互动人数</string>
    <string name="shake_fail_tip">该手机不支持重力感应，无法进行摇摇乐操作!</string>
    <string name="interfaceion_fail_tip">获取投票信息失败</string>
    <string name="nin_yet_vote_tip">您已经投过票啦,不可重复投票</string>
    <string name="not_find_vote_info_tip">没有找到对应的信息</string>
    <string name="not_find_vote_info_ex">目前没有投票相关的活动</string>
    <string name="vote_no_support_tip">可用金币不足以完成此次投票</string>
    <string name="vote_yet_stop_tip">投票已经结束啦，无法再进行投票</string>
    <string name="vote_fail_tip">投票失败</string>
    <string name="vote_yet_end_tip">投票已经结束</string>
    <string name="vote_not_start_tip">投票还没有开始</string>
    <string name="profile_message">我的消息</string>
    <string name="profile_prize">我的奖品</string>
    <string name="profile_quan">我的电子卷</string>
    <string name="kick_off_title">下线通知</string>
    <string name="kick_off_tip">您的帐号已在别处登录，如非本人操作，请及时更改密码</string>
    <string name="kick_off_sure_tip">确定</string>
    <string name="notice_off_tip">提示</string>
    <string name="how_get_prize_tip">领取说明</string>
    <string name="profile_order">我的订单</string>
    <string name="profile_order_no_tip">订单号:&#160;&#160;</string>
    <string name="profile_order_create_time_tip">下单时间:&#160;&#160;</string>
    <string name="profile_order_coin">订单金额:&#160;&#160;</string>
    <string name="profile_order_status">订单状态:</string>
    <string name="profile_pay_tip">立即支付</string>
    <string name="profile_collection">我的收藏</string>
    <string name="profile_publish">我的发布</string>
    <string name="di_qu">地区</string>
    <string name="city_tip">城市</string>
    <string name="profile_info">个人信息</string>
    <string name="profile_avatar">头像</string>
    <string name="profile_nickname">昵称</string>
    <string name="profile_gogo">gogo号</string>
    <string name="profile_address">我的地址</string>
    <string name="profile_gender">性別</string>
    <string name="profile_area">所在地点</string>
    <string name="profile_info_camera">拍照</string>
    <string name="please_upload_avatar_tip">请上传您的头像</string>
    <string name="please_upload_fact_tip">请选择您的文件</string>
    <string name="please_input_you_nickname_tip">请输入您的昵称</string>
    <string name="profile_info_album">从本地图片选择</string>
    <string name="profile_info_video">录制视频</string>
    <string name="profile_info_voice">录制音频</string>
    <string name="profile_info_local_video">从本地视频选择</string>
    <string name="profile_info_cancle">取消</string>
    <string name="profile_info_sure">确认</string>
    <string name="commit_order_tip">提交订单</string>
    <string name="profile_info_input_nickname">输入新昵称</string>
    <string name="please_selection_sex_tip">请选择您的性别</string>
    <string name="profile_info_gender_man">男</string>
    <string name="profile_info_gender_felman">女</string>
    <string name="profile_modify_success">修改成功</string>
    <string name="profile_modify_avatar_success">修改用户头像成功</string>
    <string name="profile_modify_avatar_fail">修改用户头像失败</string>
    <string name="profile_modify_avatar_uploading">正在上传用户头像</string>
    <string name="profile_invite_friend">邀请好友</string>
    <string name="bussiness_tip">商务合作</string>
    <string name="call_phone_tip">呼叫客服</string>
    <string name="call_phone_tip_value">0851-84727618</string>
    <string name="profile_invite_friend_prize_tip">奖品说明\n\t\t\t\t“微兔gogo”开展“老带新，送金币”活动，在活动期间，新用户在注册时输入邀请码，老用户和新用户都可以获得10金币的奖励，邀请越多送的越多（最多可以获赠500金币），快来参加吧！</string>
    <string name="profile_invite_friend_input_code_tip">注册时请输入我的邀请码:\t%s</string>
    <string name="profile_invite_friend_scan_download_tip">扫描二维码下载:</string>
    <string name="profile_invite_friend_confirm_invite_tip">确认邀请</string>
    <string name="profile_comment">我的评论</string>
    <string name="all_read_tip">一键读取</string>
    <string name="profile_message_yet_read">已读</string>
    <string name="profile_message_no_read">未读</string>
    <string name="profile_score">评价</string>
    <string name="profile_score_btn">发布</string>
    <string name="profile_setting">设置</string>
    <string name="profile_setting_modify_pwd">修改密码</string>
    <string name="profile_setting_push_ok">新闻推送</string>
    <string name="profile_setting_push_sound">新闻推送铃音</string>
    <string name="profile_setting_clear_cache">清除缓存</string>
    <string name="profile_clear_cache_tip">正在删除缓存文件&#8230;</string>
    <string name="clear_cache_message_tip">您确定要删除所有缓存文件吗?</string>
    <string name="profile_setting_about_us">关于我们</string>
    <string name="profile_setting_feedback">意见反馈</string>
    <string name="profile_setting_pay">免责声明</string>
    <string name="profile_setting_version_update">检查版本</string>
    <string name="profile_setting_loginout">退出登录</string>
    <string name="setting_account">账号相关</string>
    <string name="push_setting">推送设置</string>
    <string name="content_setting">内容设置</string>
    <string name="product_setting">产品信息</string>
    <string name="profile_user_left_coin">可用金币:&#160;&#160;%d</string>
    <string name="profile_user_total_coin">累积经验:&#160;&#160;%d</string>
    <string name="profile_user_account">账号:%s</string>
    <string name="profile_user_logouting_tip">账号正在退出中&#8230;</string>
    <string name="profile_user_logout_success">退出登录成功</string>
    <string name="comment_reply_tip">回复:%s</string>
    <string name="you_sure_cancel_collections_tip">你确定要取消该收藏吗</string>
    <string name="cancel_collections_tip">取消收藏</string>
    <string name="cancel_collections_success_tip">取消收藏成功</string>
    <string name="rank_tip">排行榜</string>
    <string name="desc_tip">使用说明</string>
    <string name="message_details_tip">消息详情</string>
    <string name="about_product_tip">产品介绍</string>
    <string name="about_service_phone_tip">客服电话:&#160;&#160;%s</string>
    <string name="about_us_version_tip">微兔gogo V%s</string>
    <string name="feedback_edit_hint_tip">感谢你对微兔gogo手机客户端的意见和建议</string>
    <string name="feedback_confirm_tijiao">确认提交</string>
    <string name="please_select_share_tip">请您选择如下方式分享</string>
    <string name="share_weixin_tip">微信</string>
    <string name="share_weixin_fr">朋友圈</string>
    <string name="share_message_tip">短信</string>
    <string name="share_qq_tip">QQ</string>
    <string name="share_qzone_tip">qq空间</string>
    <string name="please_input_get_username_tip">请输入领取人的姓名</string>
    <string name="please_input_get_phone_tip">请输入领取人的电话</string>
    <string name="please_input_get_address_tip">请输入详细的地址</string>
    <string name="please_change_get_address_tip">请选择省市区信息</string>
    <string name="commit_order_get_title_tip">请填写领取人的信息</string>
</resources>