<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_custom_dialog_container_layout" >

    <TextView
        android:id="@+id/profile_action_sheet_edit_dialog_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/app_common_black" />

    <View
        style="@style/style_common_horizontal_line"
        android:layout_marginTop="10dip" />

    <EditText
        android:id="@+id/profile_action_sheet_edit_dialog_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="12dip"
        android:background="@drawable/btn_common_input"
        android:gravity="center"
        android:hint="@string/profile_info_input_nickname"
        android:inputType="text"
        android:maxLength="15"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/profile_action_sheet_edit_dialog_sure"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn_drawable"
            android:text="@string/profile_info_sure"
            android:textColor="#696969"
            android:textSize="17sp" />

        <Button
            android:id="@+id/profile_action_sheet_edit_dialog_cancle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dip"
            android:layout_weight="1"
            android:background="@drawable/selector_common_btn_drawable"
            android:text="@string/profile_info_cancle"
            android:textColor="#696969"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>